[gd_scene load_steps=6 format=3 uid="uid://dkof2giitjokk"]

[ext_resource type="Script" path="res://addons/GDiscuss/MainIde.gd" id="1_7ddb0"]
[ext_resource type="Script" path="res://addons/GDiscuss/Interpreter.gd" id="2_72kee"]
[ext_resource type="CodeHighlighter" uid="uid://b6ms1okacq8pf" path="res://addons/GDiscuss/Hilight1.tres" id="3_pgkrf"]
[ext_resource type="Script" path="res://addons/GDiscuss/CustomBBcode/BetterWaveEffect.gd" id="4_64781"]

[sub_resource type="RichTextEffect" id="RichTextEffect_lkcup"]
script = ExtResource("4_64781")

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7ddb0")

[node name="Interpreter" type="Node" parent="."]
script = ExtResource("2_72kee")
parentOfDialouge = NodePath("../D")

[node name="Load" type="Button" parent="."]
layout_mode = 0
offset_left = 699.0
offset_top = 24.0
offset_right = 929.0
offset_bottom = 133.0
text = "Load"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 24.0
offset_right = 673.0
offset_bottom = 133.0
text = "BreakIn"
placeholder_text = "Name of Dialogue tree to load"
alignment = 1

[node name="TextEdit" type="CodeEdit" parent="."]
layout_mode = 0
offset_left = 963.0
offset_top = 24.0
offset_right = 1898.0
offset_bottom = 804.0
scale = Vector2(0.998474, 0.992336)
theme_override_font_sizes/font_size = 15
text = "//To read a full explination, load the dialogue file called \"docs\".

//path is a path where flags and values are stored (In an array called FLAGS in this global script)
path main_path \"Node2D\"
var testint \"testint\"

standin name main_path currentName

def speechOne(
// Name, state
STATE Steven 2 Right
TEXT \"Hello {name}\"
STOP \"next\"
TEXT \"Good to see you\"
options
	\"Hello Sue\" :  UNC
		GOTO speechTwo() // GOTO initiates the next dialogue in the sequence
	\"You killed Steve\" :  FLAG main_path \"Evidence1\" OR FLAG main_path \"Evidence2\"
		ADDFLAG main_path \"an_added_flag\" GOTO speechThree()
)

def speechTwo(
STATE Steven 2 LEFT
TEXT \"Bye Steve\"
options
	\"Bye, Sue\" :  UNC
		END
)

def speechThree(
STATE Steven 2 Right
TEXT [font_size=50][shake]\"You know?!?!\"
options
	\"Yes\" :  UNC
		END
	\"Value  > 5\" : VALUE main_path testint > 4
		END
)"
minimap_draw = true
syntax_highlighter = ExtResource("3_pgkrf")
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
gutters_draw_line_numbers = true
delimiter_strings = Array[String](["\" \""])
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
auto_brace_completion_pairs = {
"\"": "\"",
"(": ")",
"[": "]",
"{": "}"
}

[node name="TextEdit2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 158.0
offset_right = 929.0
offset_bottom = 368.0
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "[bwave] TEST [/bwave]
Example files are : BreakIn, docs, and Tester"
custom_effects = [SubResource("RichTextEffect_lkcup")]

[node name="D" type="PanelContainer" parent="."]
self_modulate = Color(0.160784, 0.160784, 0.160784, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 602.0
offset_right = 929.0
offset_bottom = 1043.0

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 392.0
offset_right = 929.0
offset_bottom = 579.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "SAVE"

[node name="Interpret" type="Button" parent="."]
layout_mode = 2
offset_left = 963.0
offset_top = 832.0
offset_right = 1897.0
offset_bottom = 1043.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Interpret"

[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Interpret" to="." method="_on_button_pressed"]
